--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "0.9.0",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
+    "drizzle-orm": "0.33.0",
     "express": "4.19.2",
+    "nanoid": "5.0.7",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -20,6 +23,7 @@
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.0",
+    "drizzle-kit": "0.24.1",
     "morgan": "1.10.0",
     "ts-node-dev": "2.0.0"
   }
