feat: add basic client api interface

--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*" : ["src/*"]
+      "@/*" : ["src/*"],
+      "@backend/*": ["../server/src/types/*"]
     }
   },
   "include": ["vite.config.ts"]
