feat: show link and copy to clipboard when creating share link

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_PPTY_KEY=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
-TEST_API_URL=http://localhost:4000
+VITE_TEST_API_URL=http://localhost:4000
