--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
     "express": "4.19.2",
+    "express-async-errors": "3.1.1",
+    "http-status-codes": "2.3.0",
     "nanoid": "3.3.4",
     "zod": "3.23.8"
   },
