--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint ./src",
     "preview": "vite preview",
-    "test:e2e": "vitest --run"
+    "test:e2e": "vitest --run",
+    "format": "prettier --write ./src",
+    "lint:fix": "eslint ./src --fix",
+    "lint:staged": "npx lint-staged"
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.1",
@@ -32,16 +35,26 @@
     "autoprefixer": "10.4.20",
     "clsx": "2.1.1",
     "eslint": "^9.9.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-tailwindcss": "3.17.4",
     "globals": "^15.9.0",
     "happy-dom": "15.0.0",
+    "lint-staged": "15.2.9",
     "postcss": "8.4.41",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vitest": "2.0.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": "eslint --fix --no-warn-ignored"
   }
 }
