--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -17,11 +17,12 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
+    "noUncheckedIndexedAccess": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*" : ["src/*"],
+      "@/*": ["src/*"],
       "@backend/*": ["../server/src/types/*"]
     }
   },
