--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "pnpm swagger:build && ts-node-dev ./src/index.ts",
+    "swagger:build": "npx swagger-cli bundle src/docs/index.yaml --outfile src/docs/build/swagger.yaml --type yaml"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
     "express-async-errors": "3.1.1",
     "http-status-codes": "2.3.0",
     "nanoid": "3.3.4",
+    "swagger-ui-express": "5.0.1",
+    "yamljs": "0.3.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -25,6 +28,8 @@
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.0",
+    "@types/swagger-ui-express": "4.1.7",
+    "@types/yamljs": "0.2.34",
     "drizzle-kit": "0.24.1",
     "morgan": "1.10.0",
     "ts-node-dev": "2.0.0"
