--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "zustand": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
