--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-query": "5.59.16",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.429.0",
     "openai": "4.56.0",
