--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "pnpm swagger:build && ts-node-dev ./src/index.ts",
     "build": "pnpm swagger:build && tsc -p tsconfig.json && mkdir -p ./dist/src/docs/build && cp ./src/docs/build/swagger.yaml ./dist/src/docs/build",
     "start": "node ./dist/src/index.js",
-    "swagger:build": "npx swagger-cli bundle src/docs/index.yaml --outfile src/docs/build/swagger.yaml --type yaml",
+    "swagger:build": "swagger-cli bundle src/docs/index.yaml --outfile src/docs/build/swagger.yaml --type yaml",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts"
@@ -24,6 +24,7 @@
     "express-async-errors": "3.1.1",
     "http-status-codes": "2.3.0",
     "nanoid": "3.3.4",
+    "swagger-cli": "4.0.4",
     "swagger-ui-express": "5.0.1",
     "yamljs": "0.3.0",
     "zod": "3.23.8"
