--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "drizzle-kit": "0.24.1",
     "morgan": "1.10.0",
     "ts-node-dev": "2.0.0",
-    "tsx": "4.19.2"
+    "tsx": "4.19.2",
+    "typescript": "^5.5.3"
   }
 }
