--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "5.59.16",
     "class-variance-authority": "^0.7.0",
+    "dotenv": "16.4.5",
     "lucide-react": "^0.429.0",
     "openai": "4.56.0",
     "react": "^18.3.1",
