chore(server): set NODE_ENV on package.json

--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm swagger:build && ts-node-dev ./src/index.ts",
+    "dev": "pnpm swagger:build && cross-env NODE_ENV=development ts-node-dev ./src/index.ts",
     "build": "pnpm swagger:build && tsc -p tsconfig.json && mkdir -p ./dist/src/docs/build && cp ./src/docs/build/swagger.yaml ./dist/src/docs/build && cp -a public ./dist",
-    "start": "node ./dist/src/index.js",
+    "start": "NODE_ENV=production node ./dist/src/index.js",
     "swagger:build": "swagger-cli bundle src/docs/index.yaml --outfile src/docs/build/swagger.yaml --type yaml",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "0.9.0",
+    "chalk": "4.1.2",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
