chore(client): add vercel rewrite

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://test-generator-api-swart.vercel.app/api/:path*"
     }
   ]
 }
