--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "5.59.16",
     "class-variance-authority": "^0.7.0",
     "dotenv": "16.4.5",
+    "framer-motion": "11.11.11",
     "lucide-react": "^0.429.0",
     "openai": "4.56.0",
     "react": "^18.3.1",
