chore(server): add eslint and prettier

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "swagger:build": "swagger-cli bundle src/docs/index.yaml --outfile src/docs/build/swagger.yaml --type yaml",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts"
+    "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts",
+    "lint": "eslint . --fix -c eslint.config.mjs"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
@@ -39,9 +41,13 @@
     "@types/yamljs": "0.2.34",
     "cross-env": "7.0.3",
     "drizzle-kit": "0.24.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "globals": "^15.9.0",
     "morgan": "1.10.0",
     "ts-node-dev": "2.0.0",
     "tsx": "4.19.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1"
   }
 }
