--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts",
-    "lint": "eslint . --fix -c eslint.config.mjs"
+    "lint": "eslint . --fix -c eslint.config.mjs",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "@eslint/js": "^9.9.0",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/jest": "29.5.14",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.0",
     "@types/swagger-ui-express": "4.1.7",
@@ -42,9 +44,12 @@
     "cross-env": "7.0.3",
     "drizzle-kit": "0.24.1",
     "eslint": "^9.9.0",
+    "eslint-plugin-jest": "28.8.3",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "^15.9.0",
+    "jest": "29.7.0",
     "morgan": "1.10.0",
+    "ts-jest": "29.2.5",
     "ts-node-dev": "2.0.0",
     "tsx": "4.19.2",
     "typescript": "^5.5.3",
