--- a/server/src/docs/index.yaml
+++ b/server/src/docs/index.yaml
@@ -16,8 +16,8 @@ tags:
 paths:
   # tests endpoints
   /test:
-    $ref: "./paths/test/test.yaml"
+    $ref: './paths/test/test.yaml'
 
   # multiple choice endpoints
   /multiple-choice-test:
-    $ref: "./paths/multipleChoiceTest/multiple-choice-test.yaml"
+    $ref: './paths/multipleChoiceTest/multiple-choice-test.yaml'
