--- a/server/src/docs/paths/multipleChoiceTest/multiple-choice-test.yaml
+++ b/server/src/docs/paths/multipleChoiceTest/multiple-choice-test.yaml
@@ -1,5 +1,5 @@
 post:
-  tags: ["Multiple Choice Test"]
+  tags: ['Multiple Choice Test']
   summary: Create a new multiple choice test
   description: This endpoint allows you to create a new multiple choice test with a title and a list of questions.
   requestBody:
@@ -11,7 +11,7 @@ post:
           properties:
             title:
               type: string
-              example: "primer test multiple choice"
+              example: 'primer test multiple choice'
             questions:
               type: array
               items:
@@ -19,7 +19,7 @@ post:
                 properties:
                   content:
                     type: string
-                    example: "quien es messi"
+                    example: 'quien es messi'
                   answer:
                     type: integer
                     description: Index of the correct option in the options array.
@@ -29,9 +29,9 @@ post:
                     items:
                       type: string
                     example:
-                      - "un jugador de futbol"
-                      - "un streamer"
-                      - "un escritor"
+                      - 'un jugador de futbol'
+                      - 'un streamer'
+                      - 'un escritor'
           required:
             - title
             - questions
@@ -46,7 +46,7 @@ post:
               id:
                 type: string
                 description: Unique identifier for the created test
-                example: "test_12345"
+                example: 'test_12345'
               title:
                 type: string
               questions:
