--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts",
     "lint": "eslint . --fix -c eslint.config.mjs",
     "format": "prettier . --write",
-    "test": "jest"
+    "test": "jest --detectOpenHandles --silent"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +40,7 @@
     "@types/jest": "29.5.14",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.0",
+    "@types/supertest": "6.0.2",
     "@types/swagger-ui-express": "4.1.7",
     "@types/yamljs": "0.2.34",
     "cross-env": "7.0.3",
@@ -51,6 +52,7 @@
     "jest": "29.7.0",
     "morgan": "1.10.0",
     "prettier": "3.3.3",
+    "supertest": "7.0.0",
     "ts-jest": "29.2.5",
     "ts-node-dev": "2.0.0",
     "tsx": "4.19.2",
