chore(server): run migrations on test dedicated sqlite db file

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts",
+    "db:migrate:test": "NODE_ENV=test drizzle-kit migrate",
     "lint": "eslint . --fix -c eslint.config.mjs",
     "format": "prettier . --write",
     "test": "jest --detectOpenHandles --silent"
