--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "pnpm --filter client dev & pnpm --filter server dev",
     "dev:fe": "pnpm --filter client dev",
     "dev:be": "pnpm --filter server dev",
-    "lint:staged": "pnpm --filter client lint:staged"
+    "lint:staged": "pnpm --filter client lint:staged",
+    "test": "pnpm --filter server test"
   },
   "keywords": [],
   "author": "",
