docs: add swagger docs for GET /api/test

--- a/server/src/docs/paths/test/test.yaml
+++ b/server/src/docs/paths/test/test.yaml
@@ -1,6 +1,23 @@
 get:
   summary: get all the tests
   tags: [Tests]
+  parameters:
+    - in: query
+      name: limit
+      schema:
+        type: integer
+        minimum: 1
+        description: Número máximo de posts a devolver
+      required: false
+      description: Limita el número de posts devueltos (por defecto devuelve todos)
+    - in: query
+      name: page
+      schema:
+        type: integer
+        minimum: 0
+        description: Número de posts a saltar antes de comenzar a devolver los resultados
+      required: false
+      description: Saltar los primeros 'n' posts (para paginación)
   responses:
     '200':
       description: tests list
@@ -8,6 +25,4 @@ get:
         application/json:
           schema:
             type: object
-            # items:
-            # $ref: "../schemas/post-schema.yaml"
           example:
