--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "0.9.0",
+    "@types/jsonwebtoken": "9.0.7",
     "chalk": "4.1.2",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
@@ -28,6 +29,7 @@
     "express": "4.19.2",
     "express-async-errors": "3.1.1",
     "http-status-codes": "2.3.0",
+    "jsonwebtoken": "9.0.2",
     "nanoid": "3.3.4",
     "swagger-cli": "4.0.4",
     "swagger-ui-express": "4.6.3",
