--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@libsql/client": "0.9.0",
     "@types/jsonwebtoken": "9.0.7",
     "chalk": "4.1.2",
+    "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/cookie-parser": "1.4.7",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.14",
