--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lint:staged": "npx lint-staged"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "5.59.16",
     "class-variance-authority": "^0.7.0",
