--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "recharts": "^2.13.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "3.23.8",
     "zustand": "5.0.1"
