--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "lint:staged": "npx lint-staged"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "5.59.16",
@@ -24,6 +26,7 @@
     "openai": "4.56.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.13.3",
     "tailwindcss-animate": "^1.0.7",
