--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@libsql/client": "0.9.0",
     "@types/jsonwebtoken": "9.0.7",
+    "bcrypt": "5.1.1",
     "chalk": "4.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
