--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "cross-env SEED=TRUE tsx ./drizzle/seed.ts",
     "db:migrate:test": "NODE_ENV=test drizzle-kit migrate",
+    "db:migrate:prod": "NODE_ENV=production drizzle-kit migrate",
     "lint": "eslint . --fix -c eslint.config.mjs",
     "format": "prettier . --write",
     "test": "jest --runInBand --detectOpenHandles --silent"
