--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.429.0",
     "openai": "4.56.0",
     "react": "^18.3.1",
+    "react-confetti-explosion": "2.1.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.26.1",
