--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.26.1",
     "recharts": "^2.13.3",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-radar": "0.9.6",
     "zod": "3.23.8",
     "zustand": "5.0.1"
   },
