--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "5.59.16",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "4.1.0",
     "dotenv": "16.4.5",
     "framer-motion": "11.11.11",
     "lucide-react": "^0.429.0",
